[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "vantadb-py"
version = "0.4.0"
description = "Source-installed Python bindings for the VantaDB embedded persistent memory engine."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "VantaDB Team"}
]
keywords = ["database", "vector-search", "embedded", "ai", "persistent-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/ness-e/Vantadb"
Repository = "https://github.com/ness-e/Vantadb"
Documentation = "https://github.com/ness-e/Vantadb/tree/main/docs"
Issues = "https://github.com/ness-e/Vantadb/issues"

[tool.maturin]
module-name = "vantadb_py"
features = ["pyo3/extension-module"]
