[package]
name = "vantadb-server"
version = "0.1.4"
edition = "2021"
publish = false
description = "Optional local server wrapper and MCP interface for VantaDB"

[dependencies]
vantadb = { path = "..", features = ["cli"] }
vantadb-mcp = { path = "../vantadb-mcp" }
# REMOVED (2024-06-10): experimental-governance dependency (moved to archive)
# If needed, use vantadb::utils::DuplicatePreventionFilter and vantadb::utils::OriginCollisionTracker instead
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
tower = { version = "0.5", features = ["util"] }
tower_governor = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

# TLS support (optional) — activated with --features tls
axum-server = { version = "0.7", optional = true, features = ["tls-rustls"] }
rustls-pemfile = { version = "2", optional = true }
tower-http = { version = "0.6.11", features = ["trace"] }
tracing-opentelemetry = { version = "0.33.0", optional = true }
opentelemetry = { version = "0.32.0", optional = true }
opentelemetry_sdk = { version = "0.32.1", optional = true }
opentelemetry-otlp = { version = "0.32.0", optional = true, features = ["grpc-tonic", "trace"] }

tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
fs2 = "0.4"
futures = "0.3"
tempfile = "3"
sysinfo = "0.30"
chrono = "0.4"
console = "0.16"
indicatif = "0.18"

[features]
custom-allocator = ["mimalloc"]
# Exposed solely for test harness compatibility with tests/common/mod.rs
cli = ["vantadb/cli"]
# Optional TLS support via axum-server + rustls
tls = ["dep:axum-server", "dep:rustls-pemfile"]
# OpenTelemetry Tracing
opentelemetry = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "opentelemetry_sdk/rt-tokio"]


[dependencies.mimalloc]
version = "0.1"
optional = true
