[package]
name = "vantadb-server"
version.workspace = true
edition.workspace = true
publish = false
description = "Optional local server wrapper and MCP interface for VantaDB"

[dependencies]
vantadb = { path = "..", features = ["cli", "server"] }
vantadb-mcp = { path = "../vantadb-mcp" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tracing = "0.1"

[dev-dependencies]
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
futures = "0.3"
tempfile = "3"
sysinfo = "0.39"
chrono = "0.4"
console = "0.16"
indicatif = "0.18"
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

[features]
custom-allocator = ["mimalloc"]
jemalloc = ["vantadb/jemalloc", "dep:tikv-jemallocator"]
cli = ["vantadb/cli"]
tls = ["vantadb/tls"]
opentelemetry = ["vantadb/opentelemetry"]


[dependencies.mimalloc]
version = "0.1"
optional = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies.tikv-jemallocator]
version = "0.6"
optional = true
