[package]
name = "vantadb-wasm"
version.workspace = true
edition.workspace = true
description = "VantaDB WASM bindings for JavaScript/TypeScript"
repository = "https://github.com/ness-e/Vantadb"
homepage = "https://vantadb.dev"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
vantadb = { path = "../", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"


