[package]
name = "vantadb-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "VantaDB WASM bindings for JavaScript/TypeScript"
repository = "https://github.com/ness-e/Vantadb"
homepage = "https://vantadb.dev"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.wasm-pack.profile.release]
# wasm-opt defaults to true (-Os) since binaryen v121+ supports bulk-memory-opt

[dependencies]
vantadb = { path = "../", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
tracing-wasm = { version = "0.2", optional = true }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["tracing-wasm"]
opfs = []

[package.metadata.cargo-machete]
ignored = ["getrandom"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true

