[package]
name = "experimental-governance"
version = "0.1.0"
edition = "2021"
description = "Experimental Governance, Admission Control, and Maintenance modules for VantaDB"
publish = false

[dependencies]
vantadb = { path = "../.." }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
bincode = "1.3"
tracing = "0.1"
rand = "0.9"
parking_lot = "0.12"
twox-hash = "2.1.2"

[features]
remote-inference = ["vantadb/remote-inference"]
